toolchain/internal/core/analysis/testdata/errors/cycles/indirect_cycle.vdl
// @expect: E601

type A {
  b: B
}

type B {
  c: C
}

type C {
  a: A
}
